--- a/Makefile.osx
+++ b/Makefile.osx
@@ -42,7 +42,7 @@ release:
 	      -DMUSESCORE_BUILD_CONFIG="${MUSESCORE_BUILD_CONFIG}" \
 	      -DMUSESCORE_REVISION="${MUSESCORE_REVISION}" \
 	      -DTELEMETRY_TRACK_ID="${TELEMETRY_TRACK_ID}" \
-	      .. -G Xcode; \
+	      .. -G Xcode  -T buildsystem=1 .; \
 	xcodebuild -project ${XCODEPROJ} -target lrelease; \
 	$(FORMATTER_START) xcodebuild -project ${XCODEPROJ} -configuration Release -target ALL_BUILD $(FORMATTER_END); \
 
